# stream-plays-pokemon

./: .gitignore  CLAUDE.md  Cargo.toml  config.toml  design-doc.md  justfile  mise.toml  readme.md
browser-source/: index.html  package.json  pnpm-lock.yaml
browser-source/src/: App.tsx  audio-worklet.ts  emerald-map-data.ts  frame-worker.ts  index.css  types.ts  useGameStream.ts
mapextract/: .gitignore  README.md  debug_metatile.py  extract_map_names.py  extract_maps.py  findings.md
saves/: save_20260224_211549.state  save_20260224_212531.state  save_20260224_213031.state  save_20260224_213531.state  save_20260224_214031.state  save_20260224_214531.state  save_20260224_215031.state  save_20260224_215531.state  save_20260224_220031.state  save_20260224_220531.state  save_20260224_221031.state  save_20260224_221531.state  save_20260224_222031.state  save_20260224_222531.state  save_20260224_223031.state  save_20260224_223531.state  save_20260224_224031.state  save_20260224_224531.state  save_20260224_225031.state  save_20260224_225531.state  save_20260224_230031.state  save_20260224_230531.state  save_20260224_231031.state  save_20260224_231531.state  save_20260224_232031.state  save_20260224_232531.state  save_20260224_233031.state  save_20260224_233531.state  save_20260224_234948.state  save_20260224_235448.state  save_20260224_235948.state  save_20260225_000448.state  save_20260225_000948.state  save_20260225_001448.state  save_20260225_001948.state  save_20260225_002448.state
src/: config.rs  error.rs  lib.rs  main.rs  types.rs
static/: index.html
(+29 files in other folders)
