[package]
name = "stream-plays-emerald"
version = "0.1.0"
edition = "2021"

[dependencies]
rustboyadvance-ng = { git = "https://github.com/espeon/rustboyadvance-ng.git", package = "rustboyadvance-core" }

tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

mozjpeg = "0.10"
cpal = "0.15"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

thiserror = "1"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
bit = "0.1"
ringbuf = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
futures-util = "0.3"

[[bin]]
name = "render-frames"
path = "src/bin/render_frames.rs"

[[bin]]
name = "play"
path = "src/bin/play.rs"

[dev-dependencies]
tokio-test = "0.4"
axum-test = "18"
tempfile = "3"
